grid fill bug on repeat last operation #60777

Closed
opened 2019-01-23 00:16:08 +01:00 by muhamad wicaksono · 10 comments

System Information
Operating system: windows 10
Graphics card: GTX 960m

Blender Version
Broken: 2.80.0-git.7f40d553f903-windows64, 2019-01-22
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional)

Short description of error
grid fill does differently when done with "repeat last operation/shift + R",

Exact steps for others to reproduce the error
the bug does not happen consistently even with almost identical mesh
Based on the default startup or an attached .blend file (as simple as possible).a99cc76934b589b3901a51333575cf48.mp4

here is the attachment of the files, thank you for such a great community
bug_grid-fill.blend

**System Information** Operating system: windows 10 Graphics card: GTX 960m **Blender Version** Broken: 2.80.0-git.7f40d553f903-windows64, 2019-01-22 (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) **Short description of error** grid fill does differently when done with "repeat last operation/shift + R", **Exact steps for others to reproduce the error** the bug does not happen consistently even with almost identical mesh Based on the default startup or an attached .blend file (as simple as possible).[a99cc76934b589b3901a51333575cf48.mp4](https://archive.blender.org/developer/F6372383/a99cc76934b589b3901a51333575cf48.mp4) here is the attachment of the files, thank you for such a great community [bug_grid-fill.blend](https://archive.blender.org/developer/F6372422/bug_grid-fill.blend)

Added subscriber: @hirvijk

Added subscriber: @hirvijk
Member

Added subscribers: @ideasman42, @JacquesLucke

Added subscribers: @ideasman42, @JacquesLucke
Member

I can reproduce the issue. I'm just not sure if this really is a bug. I suppose that @ideasman42 knows that. If he says it's a bug, I can try to fix it.

I can reproduce the issue. I'm just not sure if this really is a bug. I suppose that @ideasman42 knows that. If he says it's a bug, I can try to fix it.

In #60777#604853, @JacquesLucke wrote:
I can reproduce the issue. I'm just not sure if this really is a bug. I suppose that @ideasman42 knows that. If he says it's a bug, I can try to fix it.

alright thank you for acknowledging this

> In #60777#604853, @JacquesLucke wrote: > I can reproduce the issue. I'm just not sure if this really is a bug. I suppose that @ideasman42 knows that. If he says it's a bug, I can try to fix it. alright thank you for acknowledging this

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2019-01-24 02:14:45 +01:00

Grid fill depended on being able to initialize it's properties to match the selection, however "Repeat Last" ignored PROP_SKIP_SAVE.

Since there are many operators that work this way, changed the behavior of "Repeat Last" 1d908bffdd.

Grid fill depended on being able to initialize it's properties to match the selection, however "Repeat Last" ignored `PROP_SKIP_SAVE`. Since there are many operators that work this way, changed the behavior of "Repeat Last" 1d908bffdd.

thank you for resolving this issue very quickly, seeing how the bug is resolved i construct a different problem, which give me an apparent result which i don't know if this is intentional and that is before (2.80 2019-01-24) using transformation tools will let you use repeat last operation, now you cant do that anymore

below are another different command that i use very often that i've checked

  1. using shift + R after apply modifier on object primitives like cubes works with both version
  2. using shift + R after creating object primitives like cubes works with both version
  3. using shift + R after moving vertices/edges/faces does not work in later version
  4. using shift + R after vertices/edges/faces extrude works with both version

below are another different command that i never use but i've checked just for the sake of the bug fixing

  1. using shift + R after using every tools in grease pencil sculpt does not work in later version
  2. using shift + R after using every tools in object sculpt does not work with both version
thank you for resolving this issue very quickly, seeing how the bug is resolved i construct a different problem, which give me an apparent result which i don't know if this is intentional and that is before (2.80 2019-01-24) using transformation tools will let you use repeat last operation, now you cant do that anymore below are another different command that i use very often that i've checked 1. using shift + R after apply modifier on object primitives like cubes works with both version 2. using shift + R after creating object primitives like cubes works with both version 3. using shift + R after moving vertices/edges/faces does not work in later version 4. using shift + R after vertices/edges/faces extrude works with both version below are another different command that i never use but i've checked just for the sake of the bug fixing 1. using shift + R after using every tools in grease pencil sculpt does not work in later version 1. using shift + R after using every tools in object sculpt does not work with both version

This issue was referenced by 3d8cbb534f

This issue was referenced by 3d8cbb534f8277840b51f0ec7003f77ee2391f16

Applied alternate fix which keeps repeat transform working.

Wanted to avoid checks for this special case but seems we cant avoid it.

Applied alternate fix which keeps repeat transform working. - e63c360bcd - 3d8cbb534f Wanted to avoid checks for this special case but seems we cant avoid it.

i've just tested the newer version and the results are consistent throughout different simple and complex mesh holes that are made of either polys and tris.

this is amazing, i hope you have a great weekend, thank you.

i've just tested the newer version and the results are consistent throughout different simple and complex mesh holes that are made of either polys and tris. this is amazing, i hope you have a great weekend, thank you.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60777
No description provided.