source/blender/windowmanager/intern/wm_event_system.c
@@ -1041,6 +1041,42 @@ int WM_operator_repeat(bContext *C, wmOperator *op)
 	return wm_operator_exec(C, op, true, true);
 }
 /**
+ * Execute this operator again interactively
+ * without using #PROP_SKIP_SAVE properties, see: T60777.
+ */
+int WM_operator_repeat_interactive(bContext *C, wmOperator *op)
+{
+	IDProperty *properties = op->properties ? IDP_New(IDP_GROUP, &(IDPropertyTemplate){0}, "wmOperatorProperties") : NULL;
+	PointerRNA *ptr = MEM_dupallocN(op->ptr);
+
+	SWAP(IDProperty *, op->properties, properties);
+	SWAP(PointerRNA *, op->ptr, ptr);
+	if (op->ptr) {
+		op->ptr->data = op->properties;
+	}
+
+	/* Use functionality to initialize from previous execution to avoid re-using PROP_SKIP_SAVE. */
+	if (properties) {
+		WM_operator_last_properties_init_ex(op, properties);
+	}
+
+	int retval = wm_operator_exec(C, op, true, true);
+
+	SWAP(IDProperty *, op->properties, properties);
+	SWAP(PointerRNA *, op->ptr, ptr);
+
+	if (properties) {
+		IDP_FreeProperty(properties);
+		MEM_freeN(properties);
+	}
+	if (ptr) {
+		MEM_freeN(ptr);
+	}
+
+	return retval;
+}
+
+/**
  * \return true if #WM_operator_repeat can run
  * simple check for now but may become more involved.
  * To be sure the operator can run call `WM_operator_poll(C, op->type)` also, since this call
@@ -1226,19 +1262,24 @@ static bool operator_last_properties_init_impl(wmOperator *op, IDProperty *last_
 	return changed;
 }
 
-bool WM_operator_last_properties_init(wmOperator *op)
+bool WM_operator_last_properties_init_ex(wmOperator *op, IDProperty *last_properties)
 {
 	bool changed = false;
-	if (op->type->last_properties) {
-		changed |= operator_last_properties_init_impl(op, op->type->last_properties);
+	if (last_properties) {
+		changed |= operator_last_properties_init_impl(op, last_properties);
 		for (wmOperator *opm = op->macro.first; opm; opm = opm->next) {
-			IDProperty *idp_src = IDP_GetPropertyFromGroup(op->type->last_properties, opm->idname);
+			IDProperty *idp_src = IDP_GetPropertyFromGroup(last_properties, opm->idname);
 			if (idp_src) {
 				changed |= operator_last_properties_init_impl(opm, idp_src);
 			}
 		}
 	}
 	return changed;
+}
+
+bool WM_operator_last_properties_init(wmOperator *op)
+{
+	return WM_operator_last_properties_init_ex(op, op->type->last_properties);
 }
 
 bool WM_operator_last_properties_store(wmOperator *op)
@@ -1271,6 +1312,11 @@ bool WM_operator_last_properties_store(wmOperator *op)
 }
 
 #else
+
+bool WM_operator_last_properties_init_ex(wmOperator *UNUSED(op), IDProperty *UNUSED(last_properties))
+{
+	return false;
+}
 
 bool WM_operator_last_properties_init(wmOperator *UNUSED(op))
 {
